sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: ';' expected but ')' found.
			if (plusPetit(i+1, i)) {echange(i, i+1); swapped = true)}
                                                                               ^AlgCocktailSort1:12: error: ';' expected but ')' found.
			if (plusPetit(i, i-1)) {echange(i, i-1); swapped = true)}
                                                                               ^