sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	val n:Int = getNombreValeurs()
	var swapped:Boolean = true

	while (swapped) {
		swapped = false
		for (i <- 0 to n-2) {
			if (plusPetit(i+1, i)) {echange(i, i+1); swapped = true)}
		}
		for (i <- n-1 to 1 by -1) {
			if (plusPetit(i, i-1)) {echange(i, i-1); swapped = true)}
		}
	}
}
